# qwen-sdxl-adapter

./: .gitignore  README.md  config.py  config.yaml  diff2flow.py  model.py  pyproject.toml  requirements.txt  utils.py
notebooks/: cspb_colab.ipynb  infer_cspb.ipynb  qwen_sdxl_adapter_v2.ipynb
scripts/: build_distill_data.py  cache_dataset.py  inference.py  train.py  train_distill.py
src/: __init__.py  config.py
src/data/: __init__.py  dataset.py
src/models/: __init__.py  attention.py  bridge.py  sampler.py
src/training/: __init__.py  distill_loss.py  loss.py  trainer.py
src/utils/: __init__.py  logger.py
