[project]
name = "qwen-sdxl-adapter"
version = "0.1.0"
description = "Causal-to-Spatial Perceiver Bridge mapping Qwen3.5-Base to SDXL using Flow Matching."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=0.29.0",
    "diffusers>=0.29.0",
    "numpy>=1.26.0",
    "omegaconf>=2.3.0",
    "pillow>=10.2.0",
    "safetensors>=0.4.2",
    "torch>=2.2.0",
    "torchvision>=0.17.0",
    "tqdm>=4.66.0",
    "transformers>=4.40.0",
    "wandb>=0.16.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.15.5",
]

[tool.ruff]
target-version = "py312"
line-length = 100
exclude = [
    ".mypy_cache",
    ".ruff_cache",
    "venv",
]

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I"
]
ignore = [
    "E501",
    "F401",
    "F841",
    "I001",
    "UP006",
    "W293",
    "W292"
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
